tests/fixtures/compile_errors/assert_reason_not_string.fe
contract Foo:

    pub def foo():
        assert true, 1
